--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo+2&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  position: relative;
+  font-family: 'Exo 2', sans-serif;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  background-color: black;
+}
+
+.container{
+  position: relative;
+  width: 27em;
+  height: 22em;
+  top: 5em;
+  border: solid 0.1em rgb(2, 1, 1);
+  border-radius: 1.5em;
+  background-color: #3bb78f;
+  background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
+
+}
+
+input{
+  position: relative;
+  border: solid 0.1em black;
+  border-radius: 0.7em;
+  width: 20em;
+  height: 2em;
+  margin-bottom: 0.5em;
+}
+.inputInfos{
+  position: relative;
+  top: 5em;
+  left: 4em;
+  
+}
+.inputCep{
+  position: relative;
+  width: 10em;
+  
+  border: solid 0.1em black;
+  border-radius: 0em;
+}
+.sendCep{
+  position: relative;
+  left: 8em;
+  top: 2em;
+}
+.send{
+  position: relative;
+  width: 7em;
+  height: 2.5em;
+  cursor: pointer;
+  border: solid 0.1em black;
+  border-radius: 0.4em;
+  background-color: black;
   color: white;
+  top: 3em;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h3{
+  position: relative;
+  left: 5em;
 }
